--- a/Nop.Plugin.Shipping.USPS/Views/Configure.cshtml
+++ b/Nop.Plugin.Shipping.USPS/Views/Configure.cshtml
@@ -4,10 +4,10 @@
 }
 
 <form asp-controller="ShippingUSPS" asp-action="Configure" method="post">
-    <div class="panel-group">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div class="form-group">
+    <div class="cards-group">
+        <div class="card card-default">
+            <div class="card-body">
+                <div class="form-group row">
                     <div class="col-md-3">
                         <nop-label asp-for="Url" />
                     </div>
@@ -16,7 +16,7 @@
                         <span asp-validation-for="Url"></span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <div class="col-md-3">
                         <nop-label asp-for="Username" />
                     </div>
@@ -25,7 +25,7 @@
                         <span asp-validation-for="Username"></span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <div class="col-md-3">
                         <nop-label asp-for="Password" />
                     </div>
@@ -34,7 +34,7 @@
                         <span asp-validation-for="Password"></span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <div class="col-md-3">
                         <nop-label asp-for="AdditionalHandlingCharge" />
                     </div>
@@ -43,7 +43,7 @@
                         <span asp-validation-for="AdditionalHandlingCharge"></span>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <div class="col-md-3">
                         <nop-label asp-for="AvailableCarrierServicesDomestic" />
                     </div>
@@ -59,7 +59,7 @@
                         }
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <div class="col-md-3">
                         <nop-label asp-for="AvailableCarrierServicesInternational" />
                     </div>
@@ -75,7 +75,7 @@
                         }
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group row">
                     <div class="col-md-9 col-md-offset-3">
                         <input type="submit" name="save" class="btn bg-primary" value="@T("Admin.Common.Save")" />
                     </div>
